fix hibernate4 build issue